# camera_view_transition

./: README.md  conda.yaml  pyproject.toml  requirements.txt
camera_view_transition/: camera.py  camera_view_transition.py  coordinate_transform.py  frame.py  goal_plane.py  image.py  interpolation.py  layered_texture.py  player.py  player_group.py  soccer_pitch.py  stadium_plane.py  utils.py
camera_view_transition/data/: masks.py  soccernet.py
configs/: config.yaml
scripts/: generate_single_image.py  generate_transition.py
